# multi-stream-viewer

./: .gitignore  LICENSE  index.html  package.json  vite.config.ts
assets/icons/: icon.icns
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/assets/styles/: _base.scss  _buttons.scss  _fonts.scss  _themes.scss  _variables.scss  main.scss
src/components/: ExitDialog.vue
