[package]
name = "multi-stream-viewer"
version = "0.1.0"
description = "Multi-platform desktop app for watching multiple live streams simultaneously."
license = "MIT"
edition = "2021"
rust-version = "1.75.0"

[dependencies]
tauri = { version = "2.9.0", features = ["tray-icon", "image-png"] }
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"

[build-dependencies]
tauri-build = { version = "2.5.0", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
